[gd_scene load_steps=9 format=3 uid="uid://xtla1skwnpef"]

[ext_resource type="Script" uid="uid://dddtn6f0at2ol" path="res://src/scripts/UI/main_menu.gd" id="1_1xula"]
[ext_resource type="AudioStream" uid="uid://dt84r8oc8jgnl" path="res://assets/sounds/music/28 - Yadu Rajiv - First Steps.ogg" id="2_5s5fa"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_rwiaa"]
load_path = "res://.godot/imported/Fondo.png-7581cd83e20d3a8c8e50f8b680939e91.ctex"

[sub_resource type="SystemFont" id="SystemFont_rwiaa"]
font_names = PackedStringArray("Century Gothic")
font_weight = 600
subpixel_positioning = 0
oversampling = 10.0

[sub_resource type="LabelSettings" id="LabelSettings_1xula"]
font = SubResource("SystemFont_rwiaa")
font_size = 30
outline_size = 10
outline_color = Color(0.158472, 0.158472, 0.158472, 1)

[sub_resource type="SystemFont" id="SystemFont_5s5fa"]
font_names = PackedStringArray("Century Gothic")
font_weight = 600
subpixel_positioning = 0
oversampling = 10.0

[sub_resource type="SystemFont" id="SystemFont_hdk6i"]
font_names = PackedStringArray("Century Gothic")
font_weight = 600
subpixel_positioning = 0
oversampling = 10.0

[sub_resource type="SystemFont" id="SystemFont_ba7d3"]
font_names = PackedStringArray("Century Gothic")
font_weight = 600
subpixel_positioning = 0
oversampling = 10.0

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1xula")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CompressedTexture2D_rwiaa")
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_constants/separation = 32

[node name="Label" type="Label" parent="TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Seleccione una opci√≥n :"
label_settings = SubResource("LabelSettings_1xula")

[node name="PlayBt" type="Button" parent="TextureRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_fonts/font = SubResource("SystemFont_5s5fa")
theme_override_font_sizes/font_size = 30
text = "Comenzar"

[node name="NivelesBt" type="Button" parent="TextureRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_fonts/font = SubResource("SystemFont_hdk6i")
theme_override_font_sizes/font_size = 30
text = "Niveles"

[node name="SalirBt" type="Button" parent="TextureRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_fonts/font = SubResource("SystemFont_ba7d3")
theme_override_font_sizes/font_size = 30
text = "Salir"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_5s5fa")
autoplay = true
parameters/looping = true

[connection signal="pressed" from="TextureRect/MarginContainer/VBoxContainer/PlayBt" to="." method="_on_play_bt_pressed"]
[connection signal="pressed" from="TextureRect/MarginContainer/VBoxContainer/NivelesBt" to="." method="_on_niveles_bt_pressed"]
[connection signal="pressed" from="TextureRect/MarginContainer/VBoxContainer/SalirBt" to="." method="_on_salir_bt_pressed"]
